// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when hidden 1`] = `
<input
  aria-invalid="false"
  class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedEnd css-19qh8xo-MuiInputBase-input-MuiOutlinedInput-input"
  id=":r0:"
  name="password"
  type="password"
  value="123123"
/>
`;

exports[`should match snapshot when showing 1`] = `
<input
  aria-invalid="false"
  class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedEnd css-19qh8xo-MuiInputBase-input-MuiOutlinedInput-input"
  id=":r1:"
  name="password"
  type="text"
  value="123123"
/>
`;
